Alignment fixes

--- a/src/style/prize-table.scss
+++ b/src/style/prize-table.scss
@@ -1,5 +1,7 @@
 .prize-table {
-  td {
+  font-size: 14px;
+  td, th {
     vertical-align: middle !important;
+    padding: 10px 5px;
   }
 }
